# Fastapi-tutotial

./: .gitignore  db.sqlite  main.py  pyproject.toml
app/: main.py
app/api/: exception_handler.py
app/api/dependency/: timelog_dependencies.py
app/api/routers/remittance_router/: remittance_router.py
app/api/routers/task_router/: task_route.py
app/api/routers/timelog_router/: time_log_router.py
app/api/routers/user_router/: user_exception_handler.py  user_route.py
app/api/routers/worklog_router/: worklog_exception_handler.py  worklog_router.py
app/api/task_router/: task_exception_handler.py  task_route.py
app/api/user_router/: user_route.py
app/api/worklog_router/: worklog_router.py
app/application/: task_assignment_service.py  user_service.py  worklog_monthly_service.py  worklog_service.py
app/application/facade/: time_log_facade.py
app/application/services/: remittance_service.py  task_assignment_service.py  task_service.py  time_log_service.py  user_service.py  worklog_service.py
app/domain/: exceptions.py  schema.py
app/infrastructure/db/: engine.py  models.py
test/: conftest.py
test/api/tasks/: test_task_exceptions.py  test_task_routes.py
test/api/user/: test_user_exceptions.py  test_user_routes.py
test/api/worklog/: test_worklog_exception.py  test_worklog_route.py
test/application/: test_task_assignment_service.py  test_task_service.py  test_user_service.py  test_worklog_service.py
test/infrastructure/db/: test_task_assignment_repository.py  test_task_repository.py  test_user_repository.py  test_worklog_repository.py
(+6 files in other folders)
